--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,30 @@ version: '3.7'
 services:
   mongodb:
     image: mongo:latest
-    container_name: tms-mongodb-web-mongo
+    container_name: tms-mw-mongo
     ports:
       - '27017:27017'
     logging:
       driver: none
+
+  back:
+    build: ./back
+    image: tms-mw-back
+    container_name: tms-mw-back
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./back/config:/usr/src/app/config
+    depends_on:
+      - mongodb
+
+  ue_admin:
+    build: ./ue_admin
+    image: tms-mw-ue_admin
+    container_name: tms-mw-ue_admin
+    ports:
+      - '8080:80'
+    volumes:
+      - ./ue_admin/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - back
