--- a/back/package.json
+++ b/back/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "glob": "^7.1.6",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.4",
-    "tms-koa": "^0.0.25"
+    "tms-db": "^0.0.8",
+    "tms-koa": "^0.0.25",
+    "xlsx": "^0.15.3"
   }
 }
