--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "es6-uuid": "^1.0.1",
     "glob": "^7.1.6",
     "lodash": "^4.17.15",
     "log4js": "^6.1.0",
