--- a/back/package.json
+++ b/back/package.json
@@ -16,8 +16,9 @@
     "lodash": "^4.17.15",
     "log4js": "^6.1.0",
     "mongodb": "^3.3.4",
+    "mysql": "^2.17.1",
     "redis": "^2.8.0",
-    "tms-db": "^0.0.8",
-    "tms-koa": "^0.0.28"
+    "tms-db": "^0.0.12",
+    "tms-koa": "^0.0.30"
   }
 }
