--- a/ue_mongo/.env.production
+++ b/ue_mongo/.env.production
@@ -2,10 +2,10 @@
 NODE_ENV = production
 
 # auth base api
-VUE_APP_BACK_AUTH_BASE = '/mgdb/ue'
+VUE_APP_BACK_AUTH_BASE = '/auth'
 VUE_APP_BACK_AUTH_SERVER = 'http://localhost'
 
 # app base api
-VUE_APP_BACK_API_BASE = '/mgdb/api'
-VUE_APP_BACK_API_PLUGIN = '/mgdb/plugin'
+VUE_APP_BACK_API_BASE = '/api'
+VUE_APP_BACK_API_PLUGIN = '/plugin'
 VUE_APP_BACK_API_SERVER = 'http://localhost'
