--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -1,11 +1,11 @@
 # just a flag
-NODE_ENV = production
 
 # auth base api
 VUE_APP_BACK_AUTH_BASE = '/auth'
-VUE_APP_BACK_AUTH_SERVER = 'http://localhost'
+VUE_APP_BACK_AUTH_SERVER = 'http://localhost:3000'
+
 
 # app base api
 VUE_APP_BACK_API_BASE = '/api'
 VUE_APP_BACK_API_PLUGIN = '/plugin'
-VUE_APP_BACK_API_SERVER = 'http://localhost'
+VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
