--- a/ue_admin/.env
+++ b/ue_admin/.env
@@ -3,9 +3,11 @@
 # base api
 VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
 
+# base title
+VUE_APP_TITLE = 'tms-mongo-web admin'
+
 # base tmsAxios的name
 VUE_APP_BACK_API_BASE = '/api'
-
 VUE_APP_BACK_AUTH_BASE_REWRITE = '/auth'
 
 # 登录信息
