--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -1,5 +1,8 @@
 # just a flag
 
+# app config
+VUE_APP_TITLE = 'tms-mongo-web mongo'
+
 # auth base api
 VUE_APP_BACK_AUTH_BASE = '/auth'
 VUE_APP_BACK_AUTH_SERVER = 'http://localhost:3000'
