--- a/ue_admin/.env
+++ b/ue_admin/.env
@@ -1,14 +1,17 @@
 # just a flag
 
-# base api
-VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
-
-# base title
+# app config
 VUE_APP_TITLE = 'tms-mongo-web admin'
+VUE_APP_BASE_URL = '/admin'
 
-# base tmsAxios的name
+# auth base api
+VUE_APP_BACK_AUTH_BASE = '/auth'
+VUE_APP_BACK_AUTH_SERVER = 'http://localhost:3000'
+
+# app base api
 VUE_APP_BACK_API_BASE = '/api'
-VUE_APP_BACK_AUTH_BASE_REWRITE = '/auth'
+VUE_APP_BACK_API_PLUGIN = '/plugin'
+VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
 
 # 登录信息
 VUE_APP_LOGIN_KEY_USERNAME = ''
