--- a/ue_admin/.env
+++ b/ue_admin/.env
@@ -1,16 +1,16 @@
 # just a flag
 
 # app config
-VUE_APP_TITLE = 'tms-mongo-web admin'
+VUE_APP_TITLE = '订单管理端'
 VUE_APP_BASE_URL = '/admin'
 
 # auth base api
-VUE_APP_BACK_AUTH_BASE = '/auth'
+VUE_APP_BACK_AUTH_BASE = '/order/auth'
 VUE_APP_BACK_AUTH_SERVER = 'http://localhost:3630'
 
 # app base api
-VUE_APP_BACK_API_BASE = '/api'
-VUE_APP_BACK_API_PLUGIN = '/plugin'
+VUE_APP_BACK_API_BASE = '/order/api'
+VUE_APP_BACK_API_PLUGIN = '/order/plugin'
 VUE_APP_BACK_API_SERVER = 'http://localhost:3630'
 
 # 登录信息
