--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -2,14 +2,14 @@
 NODE_ENV=production
 
 # app config
-VUE_APP_TITLE='tms-mongo-web mongo'
-VUE_APP_BASE_URL=''
+VUE_APP_TITLE='订单用户端'
+VUE_APP_BASE_URL='/mongo'
 
 # auth base api
-VUE_APP_BACK_AUTH_BASE='/auth'
+VUE_APP_BACK_AUTH_BASE='/order/auth'
 VUE_APP_BACK_AUTH_SERVER='http://localhost:3630'
 
 # app base api
-VUE_APP_BACK_API_BASE='/api'
-VUE_APP_BACK_API_PLUGIN='/plugin'
+VUE_APP_BACK_API_BASE='/order/api'
+VUE_APP_BACK_API_PLUGIN='/order/plugin'
 VUE_APP_BACK_API_SERVER='http://localhost:3630'
