--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,26 +4,50 @@ services:
       volumes:
         - ./mongodb/data:/data/db
       ports:
-        - '27017:27017'
+        - '27013:27017'
       logging:
         driver: 'none'
+      networks:
+      - portal
 
     back:
       ports:
-        - '3000:3000'
+        - '3650:3000'
+      environment:
+      - TMS_REDIS_PREFIX=dev-op
+      - TMS_REDIS_HOST=192.168.20.247
+      - TMS_REDIS_PORT=6300
+      networks:
+      - portal
 
     ue_admin:
-      build: ./ue_admin
+      build: 
+        context: ./ue_admin
+        args:
+          vue_app_back_auth_server: http://192.168.20.71:3330
+          vue_app_back_api_server: http://back:3650
       ports:
-        - '3840:80'
-      dns:
+        - '3640:80'
+      dns: 
         - 223.6.6.6
         - 223.5.5.5
+      networks:
+      - portal
    
     ue_mongo:
-      build: ./ue_mongo
+      build: 
+         context: ./ue_mongo
+         args:
+           vue_app_back_auth_server: http://192.168.20.71:3330
+           vue_app_back_api_server: http://back:3650
       ports:
-        - '3830:80'
+        - '3630:80'
       dns:
         - 223.6.6.6
         - 223.5.5.5
+      networks:
+      - portal
+networks:
+  portal:
+    driver: bridge
+    external: true
