--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,45 @@ version: '3.7'
 services:
   mongodb:
     build: ./mongodb
-    image: tms-mongodb/mongo:latest
-    container_name: tms-mongo-mongo
+    image: tms-mongodb-order/mongo:latest
+    container_name: order-mongo
   
   back:
     build: ./back
-    image: tms-mongodb/back:latest
-    container_name: tms-mongodb-back
+    image: tms-mongodb-order/back:latest
+    container_name: order-back
     environment:
-         - NODE_ENV=production
-         - TMS__MONGODB_HOST=mongodb
-         - TMS__MONGODB_PORT=27017
-    command: ['./wait-for.sh', 'mongodb:27017', '-t', '300', '--', 'node', 'server']
+       - TMS_APP_PORT=3000
+       - TMS_APP_NAME=dev-op
+       - TMS_APP_LOG4JS_LEVEL=debug
+       - TMS_FINDER_FS_OUTDIR=/data/
+       - TMS_FINDER_FS_ROOTDIR=/data/
+       - TMS_MONGODB_HOST=mongodb
+       - TMS_MONGODB_PORT=27017
+    command: ['sh', './wait-for.sh', 'mongodb:27017', '-t', '300', '--', 'node', 'server']
   
   ue_admin:
     build:
       context: ./ue_admin
       args:
-        vue_app_base_url: /admin
-        vue_app_login_key_username: username
-        vue_app_login_key_password: password
-        vue_app_login_key_pin: pin
-    image: tms-mongodb/ue-admin:latest
-    container_name: tms-mongodb-ue_admin
+        vue_app_base_url: /order/admin
+        vue_app_back_auth_base: /order/auth
+        vue_app_back_api_base: /order/api
+        vue_app_back_api_plugin: /order/plugin
+    image: tms-mongodb-order/ue-admin:latest
+    container_name: order-ue_admin
     environment:
-      - NGINX_WEB_BASE_URL=/admin
+      - NGINX_WEB_BASE_URL=/order/admin
       
   ue_mongo:
     build:
       context: ./ue_mongo
       args:
-        vue_app_base_url: /mongo
-        vue_app_login_key_username: username
-        vue_app_login_key_password: password
-        vue_app_login_key_pin: pin
-    image: tms-mongodb/ue-mongo:latest
-    container_name: tms-mongodb-ue_mongo
+        vue_app_base_url: /order/mongo
+        vue_app_back_auth_base: /order/auth
+        vue_app_back_api_base: /order/api
+        vue_app_back_api_plugin: /order/plugin
+    image: tms-mongodb-order/ue-mongo:latest
+    container_name: order-ue_mongo
     environment:
-      - NGINX_WEB_BASE_URL=/mongo
+      - NGINX_WEB_BASE_URL=/order/mongo
