--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -1,15 +1,17 @@
 # just a flag
 NODE_ENV=production
-
 # app config
-VUE_APP_TITLE='tms-mongo-web mongo'
-VUE_APP_BASE_URL=''
+VUE_APP_TITLE=tms-mongo-web mongo
+VUE_APP_BASE_URL=
 
 # auth base api
-VUE_APP_BACK_AUTH_BASE='/auth'
-VUE_APP_BACK_AUTH_SERVER='http://localhost:3630'
+VUE_APP_BACK_AUTH_BASE=/auth
+VUE_APP_BACK_AUTH_SERVER=http://localhost:3000
 
 # app base api
-VUE_APP_BACK_API_BASE='/api'
-VUE_APP_BACK_API_PLUGIN='/plugin'
-VUE_APP_BACK_API_SERVER='http://localhost:3630'
+VUE_APP_BACK_API_BASE=/api
+VUE_APP_BACK_API_PLUGIN=/plugin
+VUE_APP_BACK_API_SERVER=http://localhost:3000
+
+# 多租户模式
+VUE_APP_TMW_REQUIRE_BUCKET=yes
