--- a/back/package.json
+++ b/back/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv-flow": "^3.1.0",
     "lodash": "^4.17.15",
     "log4js": "^6.1.0",
     "mongodb": "^3.3.4",
