--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
        - TMS_FINDER_FS_ROOTDIR=/data/
        - TMS_MONGODB_HOST=omongodb
        - TMS_MONGODB_PORT=27017
-    command: ['sh', './wait-for.sh', 'mongodb:27017', '-t', '300', '--', 'node', 'server']
+    command: ['sh', './wait-for.sh', 'omongodb:27017', '-t', '300', '--', 'node', 'server']
   
   ue_admin:
     build:
