--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -13,3 +13,6 @@ VUE_APP_BACK_AUTH_SERVER='http://localhost:3630'
 VUE_APP_BACK_API_BASE='/order/api'
 VUE_APP_BACK_API_PLUGIN='/order/plugin'
 VUE_APP_BACK_API_SERVER='http://localhost:3630'
+
+# 多租户模式
+VUE_APP_TMW_REQUIRE_BUCKET=
