add price auditing

--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -4,6 +4,8 @@ NODE_ENV=production
 # app config
 VUE_APP_TITLE='订单用户端'
 VUE_APP_BASE_URL='/mongo'
+VUE_APP_VALITOR_FIELD='dismoney_a_yly, dismoney_b_yly, dismoney_c_yly, dismoney_d_yly, dismoney_e_yly, dismoney_f_yly, disovermoney_yly, discost_month_gzh, dismoney_a_gzh, dismoney_b_gzh, dismoney_c_gzh, dismoney_d_gzh, disovermoney_gzh, discost_call_gzh,
+discost_msg_gzh'
 
 # auth base api
 VUE_APP_BACK_AUTH_BASE='/order/auth'
