--- a/ue_admin/.env
+++ b/ue_admin/.env
@@ -3,8 +3,6 @@
 # app config
 VUE_APP_TITLE = '订单管理端'
 VUE_APP_BASE_URL = '/admin'
-VUE_APP_VALITOR_FIELD='dismoney_a_yly, dismoney_b_yly, dismoney_c_yly, dismoney_d_yly, dismoney_e_yly, dismoney_f_yly, disovermoney_yly, discost_month_gzh, dismoney_a_gzh, dismoney_b_gzh, dismoney_c_gzh, dismoney_d_gzh, disovermoney_gzh, discost_call_gzh,
-discost_msg_gzh'
 
 # auth base api
 VUE_APP_BACK_AUTH_BASE = '/order/auth'
@@ -22,3 +20,7 @@ VUE_APP_LOGIN_KEY_PIN = ''
 
 # 多租户模式
 VUE_APP_TMW_REQUIRE_BUCKET=
+
+# 提交信息
+VUE_APP_SUBMIT_VALITOR_FIELD='dismoney_a_yly, dismoney_b_yly, dismoney_c_yly, dismoney_d_yly, dismoney_e_yly, dismoney_f_yly, disovermoney_yly, discost_month_gzh, dismoney_a_gzh, dismoney_b_gzh, dismoney_c_gzh, dismoney_d_gzh, disovermoney_gzh, discost_call_gzh,
+discost_msg_gzh'
