--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,9 @@ services:
         vue_app_base_url: /order/admin
         vue_app_back_auth_base: /order/auth
         vue_app_back_api_base: /order/api
-        vue_app_back_api_plugin: /order/plugin
+				vue_app_back_api_plugin: /order/plugin
+				vue_app_submit_valitor_field: dismoney_a_yly, dismoney_b_yly, dismoney_c_yly, dismoney_d_yly, dismoney_e_yly, dismoney_f_yly, disovermoney_yly, discost_month_gzh, dismoney_a_gzh, dismoney_b_gzh, dismoney_c_gzh, dismoney_d_gzh, disovermoney_gzh, discost_call_gzh,
+discost_msg_gzh
     image: tms-mongodb-order/ue-admin:latest
     container_name: order-ue_admin
     environment:
@@ -39,7 +41,9 @@ services:
         vue_app_base_url: /order/mongo
         vue_app_back_auth_base: /order/auth
         vue_app_back_api_base: /order/api
-        vue_app_back_api_plugin: /order/plugin
+				vue_app_back_api_plugin: /order/plugin
+				vue_app_submit_valitor_field: dismoney_a_yly, dismoney_b_yly, dismoney_c_yly, dismoney_d_yly, dismoney_e_yly, dismoney_f_yly, disovermoney_yly, discost_month_gzh, dismoney_a_gzh, dismoney_b_gzh, dismoney_c_gzh, dismoney_d_gzh, disovermoney_gzh, discost_call_gzh,
+discost_msg_gzh
     image: tms-mongodb-order/ue-mongo:latest
     container_name: order-ue_mongo
     environment:
