modify file upload and download

--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -11,6 +11,7 @@ VUE_APP_BACK_AUTH_SERVER='http://localhost:3630'
 # app base api
 VUE_APP_BACK_API_BASE='/order/api'
 VUE_APP_BACK_API_PLUGIN='/order/plugin'
+VUE_APP_BACK_API_FS='/order/fs'
 VUE_APP_BACK_API_SERVER='http://localhost:3630'
 
 # 多租户模式
