--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -11,6 +11,7 @@ VUE_APP_BACK_AUTH_SERVER=http://localhost:3000
 # app base api
 VUE_APP_BACK_API_BASE=/api
 VUE_APP_BACK_API_PLUGIN=/plugin
+VUE_APP_BACK_API_FS=/fs
 VUE_APP_BACK_API_SERVER=http://localhost:3000
 
 # 多租户模式
