--- a/back/package.json
+++ b/back/package.json
@@ -12,10 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.15",
-    "log4js": "^6.1.0",
+		"log4js": "^6.1.0",
+		"moment": "^2.24.0",
     "mongodb": "^3.3.4",
     "nanoid": "^3.1.4",
-    "redis": "^2.8.0",
+		"redis": "^2.8.0",
+		"request": "^2.88.2",
     "tms-koa": "^0.0.39"
   }
 }
