--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -48,7 +48,21 @@ services:
         - 223.6.6.6
         - 223.5.5.5
       networks:
-      - portal
+			- portal
+
+		ue_mongo:
+			build: 
+					context: ./ue_sale
+					args:
+						vue_app_auth_server: 
+						vue_app_api_server: http://back:3650
+			ports:
+				- ''
+			dns:
+				- 223.6.6.6
+				- 223.5.5.5
+			networks:
+			- portal
 networks:
   portal:
     driver: bridge
