--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,4 +48,17 @@ services:
     image: tms-mongodb-order/ue-mongo:latest
     container_name: order-ue_mongo
     environment:
-      - NGINX_WEB_BASE_URL=/order/mongo
+			- NGINX_WEB_BASE_URL=/order/mongo
+
+	ue_sale:
+		build:
+			context: ./ue_sale
+			args:
+				vue_app_base_url: /order/sale
+				vue_app_login_key_username: username
+				vue_app_login_key_password: password
+				vue_app_login_key_pin: pin
+		image: tms-mongodb-order/ue_sale:latest
+		container_name: order-ue_sale
+		environment:
+			- NGINX_WEB_BASE_URL=/order/sale
