--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -6,4 +6,4 @@ VUE_APP_LOGIN_KEY_PASSWORD=password
 VUE_APP_LOGIN_KEY_PIN=pin
 VUE_APP_API_BASE='/order/api'
 VUE_APP_API_SERVER=http://localhost:3000
-VUE_APP_LIB_URL=http://localhost:8088/mongo/lib/Portal
+VUE_APP_LIB_URL=http://localhost:8088/mongo/lib/List
