--- a/ue_sale/package.json
+++ b/ue_sale/package.json
@@ -13,8 +13,7 @@
     "element-ui": "^2.13.0",
     "tms-vue": "^0.0.9",
     "tms-vue-ui": "^0.0.25",
-		"vue": "^2.6.10",
-    "vuex": "^3.0.1"
+		"vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -25,7 +24,8 @@
 		"eslint-plugin-vue": "^5.0.0",
 		"shelljs": "^0.8.3",
     "signale": "^1.4.0",
-    "vue-template-compiler": "^2.6.10"
+		"vue-template-compiler": "^2.6.10",
+		"fs-extra": "^7.0.1"
   },
   "browserslist": [
     "> 1%",
