update tmsaxiosname method

--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -7,3 +7,4 @@ VUE_APP_LOGIN_KEY_PIN=pin
 VUE_APP_API_BASE='/order/api'
 VUE_APP_API_SERVER=http://localhost:3730
 VUE_APP_LIB_URL=http://localhost:8088/mongo/lib/List
+VUE_APP_USER_ROLE=sale
