--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -1,10 +1,21 @@
-VUE_APP_BASE_URL=/order/sale
-VUE_APP_AUTH_BASE='/order/auth'
+VUE_APP_BASE_URL=/sale
+VUE_APP_AUTH_BASE=
 VUE_APP_AUTH_SERVER=http://localhost:3730
 VUE_APP_LOGIN_KEY_USERNAME=username
 VUE_APP_LOGIN_KEY_PASSWORD=password
 VUE_APP_LOGIN_KEY_PIN=pin
-VUE_APP_API_BASE='/order/api'
-VUE_APP_API_SERVER=http://localhost:3730
-VUE_APP_LIB_URL=http://localhost:8088/mongo/lib/List
+VUE_APP_API_BASE=/api
+VUE_APP_API_SERVER=http://localhost:3730/api
 VUE_APP_USER_ROLE=sale
+
+
+
+#VUE_APP_BASE_URL=/order/sale
+#VUE_APP_AUTH_BASE=/order/auth
+#VUE_APP_AUTH_SERVER=http://localhost:3730
+#VUE_APP_LOGIN_KEY_USERNAME=username
+#VUE_APP_LOGIN_KEY_PASSWORD=password
+#VUE_APP_LOGIN_KEY_PIN=pin
+#VUE_APP_API_BASE=/order/api
+#VUE_APP_API_SERVER=http://localhost:3730
+#VUE_APP_USER_ROLE=sale
