--- a/ue_sale/package.json
+++ b/ue_sale/package.json
@@ -22,6 +22,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
     "shelljs": "^0.8.3",
     "signale": "^1.4.0",
     "vue-template-compiler": "^2.6.10",
