--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -54,8 +54,8 @@ services:
       build: 
         context: ./ue_sale
         args:
-          vue_app_auth_server: 
-          vue_app_api_server: http://back:3650
+          vue_app_back_auth_server: http://192.168.20.71:3330
+          vue_app_back_api_server: http://back:3650
       ports:
         - ''
       dns:
