--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,10 @@ services:
 				vue_app_base_url: /order/sale
 				vue_app_login_key_username: username
 				vue_app_login_key_password: password
-				vue_app_login_key_pin: pin
+        vue_app_login_key_pin: pin
+        vue_app_back_auth_base: /order/auth
+        vue_app_back_api_base: /order/api
+        vue_app_user_role: sale
 		image: tms-mongodb-order/ue_sale:latest
 		container_name: order-ue_sale
 		environment:
