--- a/Dockerfile-uemongo
+++ b/Dockerfile-uemongo
@@ -5,7 +5,7 @@ RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 
 WORKDIR /home/node/app
 
-COPY . .
+COPY ./ue_mongo .
 
 # 生成.env文件
 ARG vue_app_title=订单用户端
@@ -42,9 +42,9 @@ RUN sed -i 's?http://dl-cdn.alpinelinux.org/?https://mirrors.aliyun.com/?' /etc/
   apk del tzdata
 
 # 修改配置文件
-ADD ./nginx.conf.template /etc/nginx/nginx.conf.template
+ADD ./ue_mongo/nginx.conf.template /etc/nginx/nginx.conf.template
 
-ADD ./start_nginx.sh /usr/local/bin/start_nginx.sh
+ADD ./ue_mongo/start_nginx.sh /usr/local/bin/start_nginx.sh
 
 RUN chmod +x /usr/local/bin/start_nginx.sh
 
