--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,8 @@ services:
 
   ue_sale:
     build:
-      context: ./ue_sale
+      context: .
+      dockerfile: Dockerfile-uesale
       args:
         vue_app_back_auth_base: /order/auth
         vue_app_back_api_base: /order/api
