--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -57,7 +57,7 @@ services:
 
     ue_sale:
       build: 
-        context: ./ue_sale
+        context: .
         args:
           vue_app_back_auth_server: http://192.168.20.71:3330
           vue_app_back_api_server: http://back:3650
