--- a/Dockerfile-uesale
+++ b/Dockerfile-uesale
@@ -38,9 +38,9 @@ RUN sed -i 's?http://dl-cdn.alpinelinux.org/?https://mirrors.aliyun.com/?' /etc/
   apk del tzdata
 
 # 修改配置文件
-ADD nginx.conf.template /etc/nginx/nginx.conf.template
+ADD ./ue_sale/nginx.conf.template /etc/nginx/nginx.conf.template
 
-ADD start_nginx.sh start_nginx.sh
+ADD ./ue_sale/start_nginx.sh start_nginx.sh
 
 RUN chmod +x start_nginx.sh
 
