--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       context: .
       dockerfile: Dockerfile-uesale
       args:
+        vue_app_base_url: /order/sale
         vue_app_back_auth_base: /order/auth
         vue_app_back_api_base: /order/api
         vue_app_user_role: sale
