完善本地得env变量以及修改打包路径

--- a/ue_admin/.env
+++ b/ue_admin/.env
@@ -2,7 +2,7 @@
 
 # app config
 VUE_APP_TITLE = '订单管理端'
-VUE_APP_BASE_URL = '/admin'
+VUE_APP_BASE_URL = '/order/admin'
 
 # auth base api
 VUE_APP_BACK_AUTH_BASE = '/order/auth'
