--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -2,7 +2,7 @@
 
 # app config
 VUE_APP_TITLE='订单用户端'
-VUE_APP_BASE_URL='/mongo'
+VUE_APP_BASE_URL='/order/mongo'
 
 # auth base api
 VUE_APP_BACK_AUTH_BASE='/order/auth'
