--- a/Dockerfile-uemongo
+++ b/Dockerfile-uemongo
@@ -18,15 +18,15 @@ ARG vue_app_back_api_plugin
 ARG vue_app_back_api_fs
 ARG vue_app_submit_valitor_field
 
-RUN echo VUE_APP_TITLE=$vue_app_title > .env && \
-  echo VUE_APP_BASE_URL=$vue_app_base_url >> .env && \
-  echo VUE_APP_BACK_AUTH_BASE=$vue_app_back_auth_base >> .env && \
-  echo VUE_APP_BACK_AUTH_SERVER=$vue_app_back_auth_server >> .env && \
-  echo VUE_APP_BACK_API_BASE=$vue_app_back_api_base >> .env && \
-  echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> .env && \
-  echo VUE_APP_BACK_API_PLUGIN=$vue_app_back_api_plugin >> .env && \
-  echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> .env && \
-  echo VUE_APP_SUBMIT_VALITOR_FIELD=$vue_app_submit_valitor_field >> .env
+RUN echo VUE_APP_TITLE=$vue_app_title > ./ue_mongo/.env && \
+  echo VUE_APP_BASE_URL=$vue_app_base_url >> ./ue_mongo/.env && \
+  echo VUE_APP_BACK_AUTH_BASE=$vue_app_back_auth_base >> ./ue_mongo/.env && \
+  echo VUE_APP_BACK_AUTH_SERVER=$vue_app_back_auth_server >> ./ue_mongo/.env && \
+  echo VUE_APP_BACK_API_BASE=$vue_app_back_api_base >> ./ue_mongo/.env && \
+  echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> ./ue_mongo/.env && \
+  echo VUE_APP_BACK_API_PLUGIN=$vue_app_back_api_plugin >> ./ue_mongo/.env && \
+  echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> ./ue_mongo/.env && \
+  echo VUE_APP_SUBMIT_VALITOR_FIELD=$vue_app_submit_valitor_field >> ./ue_mongo/.env
 
 
 # 安装依赖包，构建代码
