--- a/ue_sale/nginx.conf.template
+++ b/ue_sale/nginx.conf.template
@@ -1,4 +1,3 @@
-
 user  nginx;
 worker_processes  auto;
 
@@ -30,9 +29,8 @@ http {
         listen       80;
         server_name  localhost;
 
-        location $NGINX_WEB_BASE_URL {
+        location / {
             root   /usr/share/nginx/html;
-            try_files $uri $uri/ $NGINX_WEB_BASE_URL/index.html;
         }
 
     }
