--- a/ue_sale/package.json
+++ b/ue_sale/package.json
@@ -13,7 +13,8 @@
     "element-ui": "^2.13.0",
     "tms-vue": "^0.0.9",
     "tms-vue-ui": "^0.0.26",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
