--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -27,7 +27,7 @@ services:
 
     ue_admin:
       build: 
-        context: ./ue_admin
+        context: .
         args:
           vue_app_back_auth_server: http://192.168.20.71:3330
           vue_app_back_api_server: http://back:3650
