--- a/Dockerfile-ueadmin
+++ b/Dockerfile-ueadmin
@@ -3,7 +3,7 @@ FROM node:12.10.0-alpine AS builder
 MAINTAINER made nodejs by p21 from lit29@chinatelecom.cn
 WORKDIR /usr/src/app
 #Install dependencied of nodejs on alpine
-RUN npm install -g npm@5.6.0  && npm install -g cnpm --registry=https://registry.npm.taobao.org
+RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 COPY . .
 # 生成.env文件
 ARG vue_app_title=订单管理端
