--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -19,8 +19,8 @@ services:
       - TMS_REDIS_PORT=6300
       - TMS_HTTP_SYNCTOPOOL_URL=http://192.168.20.248/pool/plugin/order/updateInfo
       - TMS_HTTP_SYNCTOWORK_URL=http://192.168.253.25:8008/checkapi/api/ordermanage
-      - TMS_MONGODB_USER_NAME=root
-      - TMS_MONGODB_USER_PWD=password
+      - TMS_MONGODB_USER=root
+      - TMS_MONGODB_PASSWORD=password
 
       networks:
       - portal
