--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,7 +18,7 @@ services:
       - TMS_REDIS_HOST=192.168.20.247
       - TMS_REDIS_PORT=6300
       - TMS_HTTP_SYNCTOPOOL_URL=http://192.168.20.248/pool/plugin/order/updateInfo
-      - TMS_HTTP_SYNCTOWORK_URL=http://192.168.253.25:8008/checkapi/api/ordermanage
+      - TMS_HTTP_SYNCTOWORK_URL=http://192.168.56.107/checkapi/api/ordermanage
       - TMS_MONGODB_USER=root
       - TMS_MONGODB_PASSWORD=password
 
