为客户经理修改list接口

--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -4,3 +4,6 @@ VUE_APP_BACK_AUTH_SERVER=http://localhost:3730
 VUE_APP_BACK_API_BASE=/order/api
 VUE_APP_BACK_API_SERVER=http://localhost:3730
 VUE_APP_USER_ROLE=sale
+
+# 仅用于开发环境测试
+#VUE_APP_BACK_API_BASE=http://localhost:3730/order/api
