--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -46,8 +46,8 @@ services:
       build: 
         context: .
         args:
-          vue_app_back_auth_server: http://192.168.20.71:3330
-          vue_app_back_api_server: http://back:3650
+          vue_app_back_auth_server: http://oauth
+#          vue_app_back_api_server: http://back:3650
       environment: 
         NODE_ENV: production
       ports:
