--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -2,7 +2,7 @@
 
 # app config
 VUE_APP_TITLE=tms-mongo-web mongo
-VUE_APP_BASE_URL=
+VUE_APP_BASE_URL=/mongo
 
 # auth base api
 VUE_APP_BACK_AUTH_BASE=/auth
