--- a/ue_mongo/package.json
+++ b/ue_mongo/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "dll": "webpack --config ./webpack.dll.config.js",
+    "dev": "vue-cli-service build --mode.development"
   },
   "dependencies": {
     "core-js": "^3.3.2",
@@ -23,14 +25,19 @@
     "@vue/cli-plugin-unit-jest": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.12.2",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.9.0"
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12"
   }
 }
