--- a/ue_mongo/package.json
+++ b/ue_mongo/package.json
@@ -15,7 +15,8 @@
     "tms-vue-ui": "^0.0.41",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
