修复表格错乱以及为客户经理修改样式

--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -4,8 +4,8 @@ VUE_APP_BACK_AUTH_SERVER=http://localhost:3730
 #VUE_APP_BACK_API_BASE=/order/api
 VUE_APP_BACK_API_SERVER=http://localhost:3730
 VUE_APP_USER_ROLE=sale
-VUE_APP_TAGS='editor'
-VUE_APP_DEFAULT_TAG='list'
+#VUE_APP_TAGS='editor'
+#VUE_APP_DEFAULT_TAG='list'
 
 # 仅用于开发环境测试
 VUE_APP_BACK_API_BASE=http://localhost:3730/order/api
