--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -3,8 +3,8 @@ VUE_APP_BACK_AUTH_BASE=/order/auth
 VUE_APP_BACK_AUTH_SERVER=http://localhost:3730
 #VUE_APP_BACK_API_BASE=/order/api
 VUE_APP_BACK_API_SERVER=http://localhost:3730
-VUE_APP_BACK_API_FS=/order/fs
-VUE_APP_BACK_API_PLUGIN=/order/plugin
+#VUE_APP_BACK_API_FS=/order/fs
+#VUE_APP_BACK_API_PLUGIN=/order/plugin
 VUE_APP_USER_ROLE=sale
 VUE_APP_TAGS='editor'
 VUE_APP_DEFAULT_TAG='list'
