--- a/Dockerfile-ueadmin
+++ b/Dockerfile-ueadmin
@@ -7,7 +7,7 @@ RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 #Install node_modules
 COPY . .
 # 生成.env文件
-ARG vue_app_title=订单管理端
+ARG vue_app_title=管理端
 ARG vue_app_base_url
 ARG vue_app_back_auth_base
 ARG vue_app_back_auth_server
@@ -15,7 +15,6 @@ ARG vue_app_back_api_base
 ARG vue_app_back_api_server
 ARG vue_app_back_api_plugin
 ARG vue_app_back_api_fs
-ARG vue_app_submit_valitor_field
 
 RUN echo VUE_APP_TITLE=$vue_app_title > .env && \
   echo VUE_APP_BASE_URL=$vue_app_base_url >> .env && \
@@ -24,8 +23,7 @@ RUN echo VUE_APP_TITLE=$vue_app_title > .env && \
   echo VUE_APP_BACK_API_BASE=$vue_app_back_api_base >> .env && \
   echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> .env && \
   echo VUE_APP_BACK_API_PLUGIN=$vue_app_back_api_plugin >> .env && \
-	echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> .env && \
-  echo VUE_APP_SUBMIT_VALITOR_FIELD=$vue_app_submit_valitor_field >> .env
+	echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> .env 
 
 # 安装依赖包，构建代码
 RUN cd ue_admin && cnpm i && yarn build
