前端表单支持小插件

--- a/ue_admin/.env
+++ b/ue_admin/.env
@@ -14,5 +14,9 @@ VUE_APP_BACK_API_PLUGIN = '/plugin'
 VUE_APP_BACK_API_FS = '/fs'
 VUE_APP_BACK_API_SERVER = 'http://localhost:3000'
 
+# doc editor
+VUE_APP_FRONT_DOCEDITOR_ADD=''
+VUE_APP_FRONT_DOCEDITOR_MODIFY=''
+
 # 多租户模式
 VUE_APP_TMW_REQUIRE_BUCKET=
