--- a/Dockerfile-ueadmin
+++ b/Dockerfile-ueadmin
@@ -15,6 +15,8 @@ ARG vue_app_back_api_base
 ARG vue_app_back_api_server
 ARG vue_app_back_api_plugin
 ARG vue_app_back_api_fs
+ARG vue_app_front_doceditor_add
+ARG vue_app_front_doceditor_modify
 
 RUN echo VUE_APP_TITLE=$vue_app_title > .env && \
   echo VUE_APP_BASE_URL=$vue_app_base_url >> .env && \
@@ -23,7 +25,9 @@ RUN echo VUE_APP_TITLE=$vue_app_title > .env && \
   echo VUE_APP_BACK_API_BASE=$vue_app_back_api_base >> .env && \
   echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> .env && \
   echo VUE_APP_BACK_API_PLUGIN=$vue_app_back_api_plugin >> .env && \
-	echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> .env 
+	echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> .env && \
+	echo VUE_APP_FRONT_DOCEDITOR_ADD=$vue_app_front_doceditor_add >> .env && \
+	echo VUE_APP_FRONT_DOCEDITOR_MODIFY=$vue_app_front_doceditor_modify >> .env 
 
 # 安装依赖包，构建代码
 RUN cd ue_admin && cnpm i && yarn build
