--- a/Dockerfile-uemongo
+++ b/Dockerfile-uemongo
@@ -16,7 +16,8 @@ ARG vue_app_back_api_base
 ARG vue_app_back_api_server
 ARG vue_app_back_api_plugin
 ARG vue_app_back_api_fs
-ARG vue_app_submit_valitor_field
+ARG vue_app_front_doceditor_add
+ARG vue_app_front_doceditor_modify
 
 RUN echo VUE_APP_TITLE=$vue_app_title > ./ue_mongo/.env && \
   echo VUE_APP_BASE_URL=$vue_app_base_url >> ./ue_mongo/.env && \
@@ -26,7 +27,9 @@ RUN echo VUE_APP_TITLE=$vue_app_title > ./ue_mongo/.env && \
   echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> ./ue_mongo/.env && \
   echo VUE_APP_BACK_API_PLUGIN=$vue_app_back_api_plugin >> ./ue_mongo/.env && \
   echo VUE_APP_BACK_API_FS=$vue_app_back_api_fs >> ./ue_mongo/.env && \
-  echo VUE_APP_SUBMIT_VALITOR_FIELD=$vue_app_submit_valitor_field >> ./ue_mongo/.env
+  echo VUE_APP_FRONT_DOCEDITOR_ADD=$vue_app_front_doceditor_add >> ./ue_mongo/.env && \
+	echo VUE_APP_FRONT_DOCEDITOR_MODIFY=$vue_app_front_doceditor_modify >> ./ue_mongo/.env && \ 
+  echo VUE_APP_FRONT_BATCHEDITOR=$vue_app_front_batcheditor >> ./ue_mongo/.env
 
 
 # 安装依赖包，构建代码
