--- a/ue_admin/package.json
+++ b/ue_admin/package.json
@@ -14,10 +14,10 @@
     "element-ui": "^2.12.0",
     "tms-vue": "^0.0.9",
     "tms-vue-ui": "^0.0.42",
+    "uuid": "^8.3.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1",
-    "uuid": "^8.3.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
