--- a/ue_admin/package.json
+++ b/ue_admin/package.json
@@ -13,11 +13,11 @@
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "tms-vue": "^0.0.9",
-    "tms-vue-ui": "^0.0.42",
+    "tms-vue-ui": "^0.0.43",
+    "uuid": "^8.3.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1",
-    "uuid": "^8.3.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
